data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2446.wast
;; 7. **Test Incomplete Block Type Mismatches**:    - Description: Use a block with an incomplete or incorrectly specified block type that does not match the inner instructions.    - Constraint: Check if the implementation adheres to block type constraints accurately.    - CFG Relevance: Incorrect block types can result in invalid state transitions within the CFG.

(assert_invalid
  (module (func $incomplete-block-type (result i32)
    (block (result) (i32.const 42))
  ))
  "type mismatch"
)